[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.207843, 0.631373, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.105882, 0.529412, 0.894118, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.537255, 1, 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MainLine" type="Line2D" parent="."]
width = 4.0
default_color = Color( 1, 1, 1, 0.215686 )

[node name="CurvedLine" type="Line2D" parent="."]
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="Points" type="Node2D" parent="."]

[node name="Point0" type="ColorRect" parent="Points"]
margin_left = -200.0
margin_top = -200.0
margin_right = -184.0
margin_bottom = -184.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.247059, 0.584314, 0.945098, 1 )

[node name="Point1" type="ColorRect" parent="Points"]
margin_left = 200.0
margin_top = -200.0
margin_right = 216.0
margin_bottom = -184.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.247059, 0.584314, 0.945098, 1 )

[node name="Point2" type="ColorRect" parent="Points"]
margin_left = 200.0
margin_top = 72.0
margin_right = 216.0
margin_bottom = 88.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.247059, 0.584314, 0.945098, 1 )

[node name="Point3" type="ColorRect" parent="Points"]
margin_left = -8.0
margin_top = 72.0
margin_right = 8.0
margin_bottom = 88.0
rect_min_size = Vector2( 16, 16 )
rect_pivot_offset = Vector2( 8, 8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.247059, 0.584314, 0.945098, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CurveDrawTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DrawButton" type="Button" parent="."]
margin_left = -160.0
margin_top = 232.0
margin_right = -8.0
margin_bottom = 273.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "DRAW CURVE"

[node name="ClearButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 232.0
margin_right = 160.0
margin_bottom = 273.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "CLEAR CURVE"

[connection signal="pressed" from="DrawButton" to="." method="_on_DrawButton_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
